--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,13 @@ a:hover {
   width: 538px;
   padding: 10px 20px 10px 40px;
   border-left: 1px solid #aaa;
-  text-align: justify;
+
 }
 .right h2 {
   padding: 15px 0 5px 0;
-  font-family: "Varela Round"
+  font-family: arial,sans-serif;
   font-size: 20px;
-  font-weight: 100;
+  font-weight: 600;
 }
 .right p {
  color: #777;
@@ -177,3 +177,39 @@ font-size: 170%;
 a.tagcloud_size_10 {
 font-size: 180%;
 }
+/*
+.tooltip{
+	display: inline;
+	position: relative;
+	white-space:pre-line;
+	margin-left: 15px;
+    display: inline-block;
+    vertical-align: middle;
+
+}
+
+.tooltip:hover:after{
+	background: #333;
+	background: rgba(0,0,0,.8);
+	border-radius: 5px;
+	bottom: 26px;
+	color: #fff;
+	content: attr(title);
+	left: 20%;
+	padding: 5px 15px;
+	position: absolute;
+	z-index: 98;
+	width: 220px;
+}
+
+.tooltip:hover:before{
+	border: solid;
+	border-color: #333 transparent;
+	border-width: 6px 6px 0 6px;
+	bottom: 20px;
+	content: "";
+	left: 50%;
+	position: absolute;
+	z-index: 99;
+}
+*/
